--- a/contato.html
+++ b/contato.html
@@ -40,7 +40,7 @@
 	<main>
 
 		<h1> Agradecimentos </h1>
-		<p> Olá! Meu nome é Felipe Felix, tenho 22 anos, quero desenvolver minha carreira na aréa de Dados. Agraço por sua atenção e espero 
+		<p> Olá! Meu nome é Felipe Felix, tenho 22 anos, quero desenvolver minha carreira na área de Dados. Agradeço por sua atenção e espero 
 			logo mais em comemoração a minha chegada na equipe está tomando uma <a> Heineken </a> para eternizar ainda mais esse momento. 
 			
 		</p>
