--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 	<main class="container">
 		<div class="informacoes">
 			<img class="imagem-titulo" src="./titulo.png" alt="imagem do título do filme" />
-			<p class="descricao"> Cursando Administração no 5º Período, 
-				tenho experiência em desenvolvimento Web, Análise de Dados e negócios 
-				(Python, SQL, Power Query e BI ). </p>
+			<p class="descricao"> Cursando Administração no 8º Período, 
+				tenho experiência em Engenharia de dados, Análise de Dados e negócios 
+				(Azure, DevOps, Python, SQL, Power Query e BI). </p>
 			<button class="botao-trailer">ME Conheça melhor!</button>
 		</div>
 		<img class="felipe" src="./felipe.png" alt="" />
