--- a/contato.html
+++ b/contato.html
@@ -23,9 +23,9 @@
 	</div>
 
 	<header class="cabecalho">
-		<a>
+		 <! -- <a>  
 			<img class="logo" src="./heineken.svg" alt="heineken" />
-		</a>
+		</a>  -->
 		<nav>
 			<ul class="menu">
 				<li><a href="./index.html">Home</a></li>
@@ -40,8 +40,8 @@
 	<main>
 
 		<h1> Agradecimentos </h1>
-		<p> Olá! Meu nome é Felipe Felix, tenho 22 anos, quero desenvolver minha carreira na área de Dados. Agradeço por sua atenção e espero 
-			logo mais em comemoração a minha chegada na equipe está tomando uma <a> Heineken </a> para eternizar ainda mais esse momento. 
+		<p> Olá! Meu nome é Felipe Felix, tenho 23 anos, quero continuar desenvolvendo minha carreira na área de Dados. Agradeço por sua atenção e espero 
+			logo mais fazer parte da equipe.
 			
 		</p>
 	   
