--- a/contato.html
+++ b/contato.html
@@ -23,9 +23,9 @@
 	</div>
 
 	<header class="cabecalho">
-		 <! -- <a>  
-			<img class="logo" src="./heineken.svg" alt="heineken" />
-		</a>  -->
+		  <a>  
+			<img class="logo" src="" alt="heineken" />
+		</a>  
 		<nav>
 			<ul class="menu">
 				<li><a href="./index.html">Home</a></li>
