--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 	<header class="cabecalho">
 		<a>
-			<img class="logo" src="./heineken.svg" alt="heineken" />
+			<img class="logo" src="" alt="heineken" />
 		</a>
 		<nav>
 			<ul class="menu">
