--- a/contato.html
+++ b/contato.html
@@ -23,7 +23,9 @@
 	</div>
 
 	<header class="cabecalho">
-	
+		<a>
+			<img class="logo" src="" alt="heineken" />
+		</a>
 		<nav>
 			<ul class="menu">
 				<li><a href="./index.html">Home</a></li>
