--- a/projetos.html
+++ b/projetos.html
@@ -51,7 +51,7 @@
 						<img src="./dahsprodução.png" alt="Foto de um Dashboard"> </a></li>
 				  </div>
 				  <div class="project-info">
-					<h2>Dashboard</h2>
+					<h2>Dashboard de Produção</h2>
 					<p>Painel visual onde é possível analisar dados importantes para qualquer operação de uma empresa, onde tiramos rapidamente insights para um 
 						tomada de decisão.</p>
 				  </div>
