projeto vendas add

--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
 	<main class="container">
 		<div class="informacoes">
 			<img class="imagem-titulo" src="./titulo.png" alt="imagem do título do filme" />
-			<p class="descricao"> Cursando Administração no 8º Período, 
+			<p class="descricao"> Graduação: Administração <br>
+				Cursando MBA em Gestão Tecnológica, Big Data e Inteligência Artificial, 
 				tenho experiência em Engenharia de dados, Análise de Dados e negócios 
-				(Azure, DevOps, Python, SQL, Power Query e BI). </p>
+				(Azure, DevOps, DataBricks, Python, SQL, Power Automate, Power Apps, Power Query e BI). </p>
 			<button class="botao-trailer">ME Conheça melhor!</button>
 		</div>
 		<img class="felipe" src="./felipe.png" alt="" />
@@ -48,7 +49,7 @@
 		<div class="popup">
 			<div class="content-popup">
 				<span class="close-popup"> X </span>
-				<iframe id="video" width="860" height="700" src="./mapafelipe.png"
+				<iframe id="video" width="860" height="700" src="./trajetoria.jpg"
 					title="Trailer oficial dublado" frameborder="0"
 					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
 					allowfullscreen></iframe>
