--- a/projetos.html
+++ b/projetos.html
@@ -19,7 +19,7 @@
 <body>
 	<div class="fundo-video">
 		<video class="video" autoplay loop muted>
-			<source src="./meu.mp4" type="video/mp4" />
+			
 		</video>
 	</div>
 
@@ -56,6 +56,19 @@
 						tomada de decisão.</p>
 				  </div>
 				</div>
+				<div class="swiper-slide">
+					<div class="project-img">
+  
+					  <li><a href="https://app.powerbi.com/view?r=eyJrIjoiNzRjOWRjYjAtZjNjYy00ODhjLWFiMmMtMTQ0ZjQzODg1NzhlIiwidCI6IjEyYTIzNTQ1LTEwNjMtNGY3OC1iZDUyLTE2YzJiMmQ4ODdjZiJ9"
+						   target="_blank">
+						  <img src="./dashVendas.png" alt="Foto de um Dashboard"> </a></li>
+					</div>
+					<div class="project-info">
+					  <h2>Dashboard de Vendas</h2>
+					  <p>Painel visual onde é possível analisar dados importantes para o setor de vendas da empresa, onde tiramos rapidamente insights do faturamento, produtos e vendedores  para um 
+						tomada de decisão.</p>
+					</div>
+				  </div>
 				<div class="swiper-slide">
 				  <div class="project-img">
 					<li><a href="https://github.com/FelipeFelixHP/Analise_dados/blob/main/Mini%20Projeto%20de%20an%C3%A1lise%20com%20Pandas%20.ipynb"
